test(extractor): refactor tests to use real PDF processing instead of mocks
- Replace Mockito usage with a real sample PDF loaded in @BeforeAll
- Split monolithic test into focused assertions (detection, content, geometry)
- Improve performance by parsing the PDF only once for all tests
- Add @DisplayName for better report readability
- Ensure PDDocument is properly closed in @AfterAll